--- a/php-emp-system/index.html
+++ b/php-emp-system/index.html
@@ -18,7 +18,7 @@
     <form action="action/login.php" method="post">
         <table border="1">
             <tr>
-                <th colspan="2" align="center"><h1>admin login</h1></th>
+                <th colspan="2" align="center"><h1>manage employee</h1></th>
             </tr>
             <tr>
                 <td>username :</td>
